chore(eslint): disable import react rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,8 @@
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
-  }
+  },
+  "rules": {
+     "react/react-in-jsx-scope": "off"
+ }
 }
