--- a/package.json
+++ b/package.json
@@ -18,16 +18,26 @@
     "@mui/material": "^5.11.6",
     "@mui/system": "^5.11.5",
     "@next/font": "13.1.5",
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.4",
+    "config": "3.3.1",
+    "cookie": "^0.5.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "husky": "^8.0.3",
+    "jose": "^4.11.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.0",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-query": "^3.39.3",
+    "typescript": "4.9.4",
+    "typescript-cookie": "^1.0.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.49.0",
