--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "project": "./tsconfig.json"
   },
   "rules": {
-     "react/react-in-jsx-scope": "off"
+     "react/react-in-jsx-scope": "off",
+     "linebreak-style": 0
  }
 }
